# layout-switcher

./: .gitignore  PLANNING.md  README.md  pyproject.toml
.audit/: files_read.txt  mypy.txt  pytest.txt  radon_cc.txt  ruff_check.txt  ruff_format.txt  vulture.txt
etc/xdg/autostart/: org.communitybig.layout-switcher-helper-guard.desktop
layouts/: classic.txt  g-unity.txt  modern.txt
locale/: en.po  pt-BR.po
pkgbuild/: PKGBUILD  pkgbuild.install
tests/: __init__.py  conftest.py  test_backup_manager.py  test_community_menu.py  test_ego_cache.py  test_ego_client.py  test_extension_manager.py  test_google_fonts.py  test_helper_client.py  test_helper_extension.py  test_helper_guard.py  test_layout_applier.py  test_layout_files.py  test_settings_store.py  test_snapshot_manager.py  test_theme_manager.py  test_theme_preview.py  test_ui_assets.py  test_update_checker.py  test_utils.py
usr/share/: community-layout-switcher  install.sh
usr/share/applications/: org.bigappearance.app.desktop  org.communitybig.layout-switcher.desktop
usr/share/community_layout_switcher/: __init__.py  backup_manager.py  constants.py  extension_manager.py  layout_applier.py  settings_store.py  shell_reloader.py  theme_manager.py  utils.py
usr/share/layout-switcher/: __init__.py  backup_manager.py  constants.py  ego_cache.py  ego_client.py  extension_manager.py  google_fonts.py  helper_client.py  helper_guard.py  layout_applier.py  main.py  settings_store.py  shell_reloader.py  snapshot_manager.py  theme_manager.py  theme_preview.py  update_checker.py  utils.py
usr/share/legacy/: main.py
(+195 files in other folders)
